test/fail/vt_00.v3
//@execute = 167
type vt_00a { case M; }
def main() -> int {
	var x: vt_00a = vt_00a.M;
	return 167;
}
